--- a/quem-somos.html
+++ b/quem-somos.html
@@ -17,8 +17,8 @@
 			<ul>
 				<li><a href="./">Home</a></li>
 				<li><a href="./quem-somos.html">Quem Somos</a></li>
-				<li><a href="#">Serviços</a></li>
-				<li><a href="#">Contato</a></li>
+				<li><a href="./servicos.html">Serviços</a></li>
+				<li><a href="./contato.html">Contato</a></li>
 			</ul>
 		</div>
 
