--- a/servicos.html
+++ b/servicos.html
@@ -27,8 +27,8 @@
 	<br clear="all" />
 
 	<div class="content">
-		
-		<h1>Home</h1>
+
+		<h1>Serviços</h1>
 
 	</div>
 	<div class="footer">rodape</div>
