--- a/clientes.html
+++ b/clientes.html
@@ -18,6 +18,7 @@
 				<li><a href="./">Home</a></li>
 				<li><a href="./quem-somos.html">Quem Somos</a></li>
 				<li><a href="./servicos.html">Serviços</a></li>
+				<li><a href="./clientes.html">Clientes</a></li>
 				<li><a href="./contato.html">Contato</a></li>
 			</ul>
 		</div>
@@ -27,11 +28,11 @@
 	<br clear="all" />
 
 	<div class="content">
-
-		<h1>Contato</h1>
+		
+		<h1>Clientes</h1>
 
 	</div>
-
+	
 	<div class="footer">
 
 		<ul>
