--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<li><a href="./">Home</a></li>
 				<li><a href="./quem-somos.html">Quem Somos</a></li>
 				<li><a href="./servicos.html">Serviços</a></li>
+				<li><a href="./clientes.html">Clientes</a></li>
 				<li><a href="./contato.html">Contato</a></li>
 			</ul>
 		</div>
@@ -31,7 +32,17 @@
 		<h1>Home</h1>
 
 	</div>
-	<div class="footer">rodape</div>
+	
+	<div class="footer">
+
+		<ul>
+			<li><a href="./">Home</a></li>
+			<li><a href="./quem-somos.html">Quem Somos</a></li>
+			<li><a href="./servicos.html">Serviços</a></li>
+			<li><a href="./contato.html">Contato</a></li>
+		</ul>
+
+	</div>
 
 </body>
 </html>
