--- a/quem-somos.html
+++ b/quem-somos.html
@@ -31,7 +31,17 @@
 		<h1>Quem Somos</h1>
 
 	</div>
-	<div class="footer">rodape</div>
+	
+	<div class="footer">
+
+		<ul>
+			<li><a href="./">Home</a></li>
+			<li><a href="./quem-somos.html">Quem Somos</a></li>
+			<li><a href="./servicos.html">Serviços</a></li>
+			<li><a href="./contato.html">Contato</a></li>
+		</ul>
+
+	</div>
 
 </body>
 </html>
