--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			<li><a href="./">Home</a></li>
 			<li><a href="./quem-somos.html">Quem Somos</a></li>
 			<li><a href="./servicos.html">Serviços</a></li>
+			<li><a href="./clientes.html">Clientes</a></li>
 			<li><a href="./contato.html">Contato</a></li>
 		</ul>
 
